<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#464051"
    android:layout_height="match_parent"
    tools:context=".Login_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_main"
        android:alpha="0.7"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/color_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FIT GYM"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        app:cardCornerRadius="28dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="495dp"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/benvenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benvenue"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/txtingf" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tertoid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/tertoid"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username_lg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/done_icon"
                android:inputType="number" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/testopass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/testopass"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/password_lg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/password"
                android:inputType="textPassword">


            </EditText>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/verpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"
                    android:drawableEnd="@drawable/ver_password"
                    android:text="@string/verpassword" />


            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btnsignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_lg"
                android:text="@string/btnsignin" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnsignin"
                android:layout_marginTop="10dp"
                android:text="@string/btnRegister" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>




</RelativeLayout>