<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#464051"
    tools:context=".EditarMembresiaAdmin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/color_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FIT GYM"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/update"/>


    <androidx.cardview.widget.CardView
        android:layout_width="359dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="70dp"
        app:cardCornerRadius="28dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/edtmm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edtmm"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtingf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/txtingf" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/tipexistmemb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/tipexistmemb"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/tipo_membresia"
                 />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/precio_membresia"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:drawableEnd="@drawable/dolar"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/areas"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_Areas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/areas"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />




            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnsignin"
                android:background="@drawable/btn_editar"
                android:text="@string/editar_producto" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnEditar"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_eliminar"
                android:text="@string/eliminar_producto" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/color_menu"
        app:itemIconTint="@drawable/style_menu"
        app:itemTextColor="@drawable/style_menu"
        app:menu="@menu/menu_admin"/>

</RelativeLayout>